# sailing-explorers

./: CMakeLists.txt  submission-realtime.md  submission.md
resources/shaders/: default.frag  default.vert  depth.frag  depth.vert  motion_blur.frag  sea.frag  sea.vert  texture.frag  velocity.frag
scenefiles/realtime/sail_game/: sailboat.json
src/: mainwindow.cpp  realtime.cpp  realtime.h  realtime_fbo.cpp  realtime_geometry.cpp  realtime_lights.cpp  realtime_paint.cpp  settings.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Tet.cpp  Tet.h  Triangle.cpp  shape.cpp  shape.h
src/utils/: camera.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h
